--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parcel React App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="index.tsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Airtable timeline</title>
+    <link rel="stylesheet" href="app.css">
+</head>
+<body>
+    <div id="root"></div>
+    <script type="module" src="App.jsx"></script>
+</body>
 </html>
